# Modern-computing-technologies

./: README.md
first_task/Laplace1DSolver/: Project.toml
first_task/Laplace1DSolver/scripts/: generate_plots.jl  run_task.jl
first_task/Laplace1DSolver/src/: Laplace1DSolver.jl  Metrics.jl  TridiagonalMatrixAlgorithm.jl
fourth_task/: CMakeLists.txt  mesh.cpp  mozhaysk_mesh.vtk  result.vtk
second_task/: .gitignore  CMakeLists.txt  Poisson_solver.cpp  README.md  plot_result.py  run.sh
third_task/: Default Dataset.csv  make_mesh.py  mosreg_mesh.geo
